syntax="proto3";// syntax of the proto file (current version is 3)
package proto.chat; // package where we will generate the file

option java_multiple_files = true; // use multiple file for each object instead of one big file

message ChatMessage{
   string from = 1;
   string msg = 2;
   string to = 3;
   bool typing = 4;
   bool read = 5;
}

message UserInChat{
	string username = 1;
}

message Empty {}

service ChatService {
    rpc sendMsg(ChatMessage) returns (Empty) {}
    rpc receiveMsg(UserInChat) returns (stream ChatMessage) {}
}